Implementing Category ComboBox with treeview. TODO: Ther content is a mee, what is shown is not the correct representation of the data #9

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -545,6 +545,7 @@
 	<system:String x:Key="Edit.Product.DataGrid.Header.Id">Id</system:String>
 	<system:String x:Key="Edit.Product.DataGrid.Header.Name">Produktnaam</system:String>
     <system:String x:Key="Edit.Product.DataGrid.Header.Category">Categorie</system:String>
+    <system:String x:Key="Edit.Product.DataGrid.Header.Code">Zoeknaam</system:String>
 
 	<system:String x:Key="Edit.Product.Tab.General.Label">Produkt gegevens</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Text">Produkt gegevens</system:String>
