--- a/Modelbouwer/View/ProductManagement.xaml
+++ b/Modelbouwer/View/ProductManagement.xaml
@@ -227,6 +227,7 @@
 										Placement="Bottom"
 										PlacementTarget="{Binding ElementName=CategoryTextBox}"
 										StaysOpen="False"
+										Opened="CategoryPopupOpened"
 										>
 										<Border
 											Background="White"
@@ -338,12 +339,16 @@
 										/>
 
 									<Button
-										Grid.Row="5"
+										Grid.Row="5" Style="{StaticResource ComboBoxButtonStyle}"
 										Grid.ColumnSpan="2" HorizontalContentAlignment="Left"
 										Width="600" HorizontalAlignment="Left"
 										Click="CategoryChange"
-										Content="{Binding CategoryViewModel.SelectedCategory.CategoryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-										/>
+										>
+										<StackPanel Orientation="Horizontal">
+											<TextBlock Text="{Binding CategoryViewModel.SelectedCategory.CategoryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5,0,0,0" Width="575"/>
+											<Path Data="M 0 0 L 5 5 L 10 0 Z" Fill="DarkBlue" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,5,0" Width="10" Height="10"/>
+										</StackPanel>
+									</Button>
 
 									<!--#endregion-->
 								</Grid>
